--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
             <h1 class="text-2xl font-bold text-blue-700">Erolack Paints</h1>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="#home" class="hover:text-blue-600">Home</a></li>
-                <li><a href="#products" class="hover:text-blue-600">Products</a></li>
-                <li><a href="#about" class="hover:text-blue-600">About</a></li>
-                <li><a href="#contact" class="hover:text-blue-600">Contact</a></li>
+                <li><a href="#" class="hover:text-blue-600">Home</a></li>
+                <li><a href="products.html" class="hover:text-blue-600">Products</a></li>
+                <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+                <li><a href="gallery.html" class="hover:text-blue-600">Galley</a></li>
+                <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
             </ul>
             <button id="menuBtn" class="md:hidden focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -28,10 +29,11 @@
             </button>
         </div>
         <ul id="mobileMenu" class="md:hidden hidden flex-col space-y-2 px-4 pb-4">
-            <li><a href="#home" class="block py-2 text-blue-700">Home</a></li>
-            <li><a href="#products" class="block py-2 text-blue-700">Products</a></li>
-            <li><a href="#about" class="block py-2 text-blue-700">About</a></li>
-            <li><a href="#contact" class="block py-2 text-blue-700">Contact</a></li>
+            <li><a href="#" class="hover:text-blue-600">Home</a></li>
+            <li><a href="products.html" class="hover:text-blue-600">Products</a></li>
+            <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+            <li><a href="gallery.html" class="hover:text-blue-600">Galley</a></li>
+            <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
         </ul>
     </nav>
 
