--- a/gallery.html
+++ b/gallery.html
@@ -1,76 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Erolack Paints | Gallery</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Erolack Paints | Gallery</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <body class="bg-gray-50 text-gray-800">
+    <nav class="bg-white shadow-md fixed w-full z-10">
+      <div
+        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
+      >
+        <h1 class="text-2xl font-bold text-blue-700">Erolack Paints</h1>
+        <ul class="hidden md:flex space-x-6">
+          <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+          <li>
+            <a href="products.html" class="hover:text-blue-600">Products</a>
+          </li>
+          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+          <li>
+            <a href="gallery.html" class="hover:text-blue-600 font-bold"
+              >Gallery</a
+            >
+          </li>
+          <li>
+            <a href="contact.html" class="hover:text-blue-600">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<body class="bg-gray-50 text-gray-800">
-  <nav class="bg-white shadow-md fixed w-full z-10">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-blue-700">Erolack Paints</h1>
-      <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
-        <li><a href="products.html" class="hover:text-blue-600">Products</a></li>
-        <li><a href="about.html" class="hover:text-blue-600">About</a></li>
-        <li><a href="gallery.html" class="hover:text-blue-600 font-bold">Gallery</a></li>
-        <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+    <section class="pt-24 py-16 px-6 bg-blue-50 text-center">
+      <h2 class="text-4xl font-bold text-blue-800 mb-4">Our Gallery</h2>
+      <p class="text-lg max-w-3xl mx-auto">
+        Witness the transformation Erolack Paints brings through vibrant colors
+        and smooth finishes in homes, offices, and commercial projects.
+      </p>
+    </section>
 
-  <!-- Section 1: Intro -->
-  <section class="pt-24 py-16 px-6 bg-blue-50 text-center">
-    <h2 class="text-4xl font-bold text-blue-800 mb-4">Our Gallery</h2>
-    <p class="text-lg max-w-3xl mx-auto">Witness the transformation Erolack Paints brings through vibrant colors and smooth finishes in homes, offices, and commercial projects.</p>
-  </section>
-
-  <!-- Section 2: Residential Projects -->
-  <section class="py-16 px-6 bg-white">
-    <h3 class="text-3xl font-semibold text-blue-700 text-center mb-8">Residential Projects</h3>
-    <div2 class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+    <section class="py-16 px-6 bg-white">
+      <h3 class="text-3xl font-semibold text-blue-700 text-center mb-8">
+        Residential Projects
+      </h3>
+      <div2 class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
         <img src="e1.jpg" alt="Project 1" class="rounded shadow" />
         <img src="e2.jpg" alt="Project 2" class="rounded shadow" />
         <img src="e3.jpg" alt="Project 3" class="rounded shadow" />
-    </div2>
-  </section>
+      </div2>
+    </section>
 
-  <!-- Section 3: Office Interiors -->
-  <section class="py-16 px-6 bg-blue-100">
-    <h3 class="text-3xl font-semibold text-blue-800 text-center mb-8">Office Interiors</h3>
-    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <img src="o1.jpg" alt="Office 1" class="rounded shadow" />
-      <img src="o2.jpeg" alt="Office 2" class="rounded shadow" />
-      <img src="o3.webp" alt="Office 3" class="rounded shadow" />
-    </div>
-  </section>
+    <section class="py-16 px-6 bg-blue-100">
+      <h3 class="text-3xl font-semibold text-blue-800 text-center mb-8">
+        Office Interiors
+      </h3>
+      <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+        <img src="o1.jpg" alt="Office 1" class="rounded shadow" />
+        <img src="o2.jpeg" alt="Office 2" class="rounded shadow" />
+        <img src="o3.webp" alt="Office 3" class="rounded shadow" />
+      </div>
+    </section>
 
-  <!-- Section 4: Commercial Buildings -->
-  <section class="py-16 px-6 bg-white">
-    <h3 class="text-3xl font-semibold text-blue-700 text-center mb-8">Commercial Buildings</h3>
-    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <img src="c1.jpg" alt="Commercial 1" class="rounded shadow" />
-      <img src="c2.jpeg" alt="Commercial 2" class="rounded shadow" />
-      <img src="c3.jpeg" alt="Commercial 3" class="rounded shadow" />
-    </div>
-  </section>
+    <section class="py-16 px-6 bg-white">
+      <h3 class="text-3xl font-semibold text-blue-700 text-center mb-8">
+        Commercial Buildings
+      </h3>
+      <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+        <img src="c1.jpg" alt="Commercial 1" class="rounded shadow" />
+        <img src="c2.jpeg" alt="Commercial 2" class="rounded shadow" />
+        <img src="c3.jpeg" alt="Commercial 3" class="rounded shadow" />
+      </div>
+    </section>
 
-  <!-- Section 5: Wall Art & Texture Work -->
-  <section class="py-16 px-6 bg-blue-50">
-    <h3 class="text-3xl font-semibold text-blue-800 text-center mb-8">Wall Art & Texture Work</h3>
-    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <img src="w1.jpeg" alt="Art 1" class="rounded shadow" />
-      <img src="w2.webp" alt="Art 2" class="rounded shadow" />
-      <img src="w3.webp" alt="Art 3" class="rounded shadow" />
-    </div>
-  </section>
+    <section class="py-16 px-6 bg-blue-50">
+      <h3 class="text-3xl font-semibold text-blue-800 text-center mb-8">
+        Wall Art & Texture Work
+      </h3>
+      <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
+        <img src="w1.jpeg" alt="Art 1" class="rounded shadow" />
+        <img src="w2.webp" alt="Art 2" class="rounded shadow" />
+        <img src="w3.webp" alt="Art 3" class="rounded shadow" />
+      </div>
+    </section>
 
-  <footer class="bg-gray-200 text-center py-6">
-    <p>&copy; 2025 Erolack Paints. All rights reserved.</p>
-  </footer>
-</body>
-
+    <footer class="bg-gray-200 text-center py-6">
+      <p>&copy; 2025 Erolack Paints. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
