--- a/contact.html
+++ b/contact.html
@@ -1,81 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Erolack Paints | Contact</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Erolack Paints | Contact</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body class="bg-gray-50 text-gray-800">
-  <nav class="bg-white shadow-md fixed w-full z-10">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-blue-700">Erolack Paints</h1>
-      <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
-        <li><a href="products.html" class="hover:text-blue-600">Products</a></li>
-        <li><a href="about.html" class="hover:text-blue-600">About</a></li>
-        <li><a href="gallery.html" class="hover:text-blue-600">Gallery</a></li>
-        <li><a href="contact.html" class="hover:text-blue-600 font-bold">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <!-- Section 1: Contact Header -->
-  <section class="pt-24 py-16 px-6 bg-blue-50 text-center">
-    <h2 class="text-4xl font-bold text-blue-800 mb-4">Get in Touch</h2>
-    <p class="text-lg max-w-3xl mx-auto">Whether you have a question, feedback, or a custom order – our team is here to assist you every step of the way.</p>
-  </section>
-
-  <!-- Section 2: Contact Form -->
-  <section class="py-16 px-6 bg-white">
-    <div class="max-w-4xl mx-auto bg-blue-100 p-8 rounded shadow">
-      <form class="grid md:grid-cols-2 gap-6">
-        <input type="text" placeholder="Your Name" class="p-3 rounded border border-gray-300" required />
-        <input type="email" placeholder="Your Email" class="p-3 rounded border border-gray-300" required />
-        <input type="text" placeholder="Subject" class="p-3 rounded border border-gray-300 col-span-2" required />
-        <textarea rows="5" placeholder="Your Message" class="p-3 rounded border border-gray-300 col-span-2" required></textarea>
-        <button type="submit" class="bg-blue-600 text-white py-3 px-6 rounded col-span-2 hover:bg-blue-700">Send Message</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- Section 3: Visit Us -->
-  <section class="py-16 px-6 bg-blue-50 text-center">
-    <h3 class="text-3xl font-semibold text-blue-800 mb-4">Visit Our Office</h3>
-    <p class="text-lg">Plot #15, Industrial Estate, Lahore, Pakistan</p>
-    <p>Mon - Sat: 9:00 AM to 6:00 PM</p>
-  </section>
-
-  <!-- Section 4: Contact Details -->
-  <section class="py-16 px-6 bg-white text-center">
-    <div class="grid md:grid-cols-3 gap-6 max-w-4xl mx-auto">
-      <div>
-        <h4 class="font-bold text-blue-600 text-lg">Phone</h4>
-        <p>+92 42 1234567</p>
+  <body class="bg-gray-50 text-gray-800">
+    <nav class="bg-white shadow-md fixed w-full z-10">
+      <div
+        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
+      >
+        <h1 class="text-2xl font-bold text-blue-700">Erolack Paints</h1>
+        <ul class="hidden md:flex space-x-6">
+          <li><a href="index.html" class="hover:text-blue-600">Home</a></li>
+          <li>
+            <a href="products.html" class="hover:text-blue-600">Products</a>
+          </li>
+          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+          <li>
+            <a href="gallery.html" class="hover:text-blue-600">Gallery</a>
+          </li>
+          <li>
+            <a href="contact.html" class="hover:text-blue-600 font-bold"
+              >Contact</a
+            >
+          </li>
+        </ul>
       </div>
-      <div>
-        <h4 class="font-bold text-blue-600 text-lg">Email</h4>
-        <p>info@erolackpaints.com</p>
+    </nav>
+
+    <section class="pt-24 py-16 px-6 bg-blue-50 text-center">
+      <h2 class="text-4xl font-bold text-blue-800 mb-4">Get in Touch</h2>
+      <p class="text-lg max-w-3xl mx-auto">
+        Whether you have a question, feedback, or a custom order – our team is
+        here to assist you every step of the way.
+      </p>
+    </section>
+
+    <section class="py-16 px-6 bg-white">
+      <div class="max-w-4xl mx-auto bg-blue-100 p-8 rounded shadow">
+        <form class="grid md:grid-cols-2 gap-6">
+          <input
+            type="text"
+            placeholder="Your Name"
+            class="p-3 rounded border border-gray-300"
+            required
+          />
+          <input
+            type="email"
+            placeholder="Your Email"
+            class="p-3 rounded border border-gray-300"
+            required
+          />
+          <input
+            type="text"
+            placeholder="Subject"
+            class="p-3 rounded border border-gray-300 col-span-2"
+            required
+          />
+          <textarea
+            rows="5"
+            placeholder="Your Message"
+            class="p-3 rounded border border-gray-300 col-span-2"
+            required
+          ></textarea>
+          <button
+            type="submit"
+            class="bg-blue-600 text-white py-3 px-6 rounded col-span-2 hover:bg-blue-700"
+          >
+            Send Message
+          </button>
+        </form>
       </div>
-      <div>
-        <h4 class="font-bold text-blue-600 text-lg">Social</h4>
-        <p>Facebook | Instagram | LinkedIn</p>
+    </section>
+
+    <section class="py-16 px-6 bg-blue-50 text-center">
+      <h3 class="text-3xl font-semibold text-blue-800 mb-4">
+        Visit Our Office
+      </h3>
+      <p class="text-lg">Plot #15, Industrial Estate, Lahore, Pakistan</p>
+      <p>Mon - Sat: 9:00 AM to 6:00 PM</p>
+    </section>
+
+    <section class="py-16 px-6 bg-white text-center">
+      <div class="grid md:grid-cols-3 gap-6 max-w-4xl mx-auto">
+        <div>
+          <h4 class="font-bold text-blue-600 text-lg">Phone</h4>
+          <p>+92 42 1234567</p>
+        </div>
+        <div>
+          <h4 class="font-bold text-blue-600 text-lg">Email</h4>
+          <p>info@erolackpaints.com</p>
+        </div>
+        <div>
+          <h4 class="font-bold text-blue-600 text-lg">Social</h4>
+          <p>Facebook | Instagram | LinkedIn</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Section 5: Map Embed -->
-  <section class="py-16 px-6 bg-blue-100">
-    <div class="max-w-6xl mx-auto">
-      <iframe src="https://maps.google.com/maps?q=Lahore%20Pakistan&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="400" class="rounded shadow"></iframe>
-    </div>
-  </section>
+    <section class="py-16 px-6 bg-blue-100">
+      <div class="max-w-6xl mx-auto">
+        <iframe
+          src="https://maps.google.com/maps?q=Lahore%20Pakistan&t=&z=13&ie=UTF8&iwloc=&output=embed"
+          width="100%"
+          height="400"
+          class="rounded shadow"
+        ></iframe>
+      </div>
+    </section>
 
-  <footer class="bg-gray-200 text-center py-6">
-    <p>&copy; 2025 Erolack Paints. All rights reserved.</p>
-  </footer>
-</body>
-
+    <footer class="bg-gray-200 text-center py-6">
+      <p>&copy; 2025 Erolack Paints. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
